--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<body style="background-color:#FFFF30;"></body>
+
 <html><body style="background:#f0f0f0;"><h2>點擊縮圖播放影片</h2><div style="display:flex;flex-wrap:wrap;">
 <a href="https://www.youtube.com/watch?v=ILL-P_K_nzo" target="_blank"><img src="thumb_0.jpg" style="margin:10px;width:160px;height:90px;"></a>
 <a href="https://www.youtube.com/watch?v=QTpaAQRvk2A" target="_blank"><img src="thumb_1.jpg" style="margin:10px;width:160px;height:90px;"></a>
