--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ o/
   <video width="560" height="315" controls>
     <source src="11.mp4" type="video/mp4">
   </video>
-  <video width="video/560" height="315" controls>
+  <video width="560" height="315" controls>
     <source src="12.mp4" type="video/mp4">
   </video>
   <video width="560" height="315" controls>
