--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/xvajI1ljigc?si=mHSdawfQU7njDwdh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     ▶️ 點我看影片
   <video width="560" height="315" controls>
-    <source src="11.mp4" type="video/mp4">
+    <source src="https://m-jpg533.github.io/pp/11.mp4" type="video/mp4">
   </video>
   <video width="560" height="315" controls>
-    <source src="12.mp4" type="video/mp4">
+    <source src="https://m-jpg533.github.io/pp/12.mp4" type="video/mp4">
   </video>
   <video width="560" height="315" controls>
-    <source src="22.mp4" type="video/mp4">
+    <source src="https://m-jpg533.github.io/pp/22.mp4" type="video/mp4">
   </video>
    <video width="560" height="315" controls>
-    <source src="13.mp4" type="video/mp4">
+    <source src="https://m-jpg533.github.io/pp/13.mp4" type="video/mp4">
   </video>
 
 </body>
