--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
       background-color: #cc0000;
     }
   </style>
+  // 設置 Cookie
+document.cookie = "username=JohnDoe; path=/; max-age=3600"; // 1小時過期
+
+// 讀取 Cookie
+console.log(document.cookie);
+
 </head>
 <body>
   
