--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
 
 </head>
 <body>
-  
+   <h1>設置 Cookie 範例</h1>
+
+  <!-- ✅ 將 JavaScript 代碼放入 <script> 標籤中 -->
+  <script>
+    // 設置 Cookie，有效期 1 小時
+    document.cookie = "username=JohnDoe; path=/; max-age=3600";
+    console.log("Cookies: ", document.cookie);
+  </script>
+
   <p>這是我在 GitHub Pages 建立的第一個網頁</p>
   <h1>2025/04/11  母親節快樂</h1>
   <!-- ✅ 點圖片跳轉 -->
