--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 </head>
 <body>
-   <h1>設置 Cookie 範例</h1>
+   <h1 style="display: none;">設置 Cookie 範例</h1>
+
 
   <!-- ✅ 將 JavaScript 代碼放入 <script> 標籤中 -->
   <script>
