--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 
   <!-- ✅ 將 JavaScript 代碼放入 <script> 標籤中 -->
   <script>
-    // 設置 Cookie，有效期 1 小時
-    document.cookie = "username=JohnDoe; path=/; max-age=3600";
-    console.log("Cookies: ", document.cookie);
     
+    // 設置 Cookie，1 小時過期
+document.cookie = "username=YourNameHere; path=/; max-age=3600";
+console.log(document.cookie);
+
   </script>
 
   <p>這是我在 GitHub Pages 建立的第一個網頁</p>
