--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ console.log(document.cookie);
     
   <!-- ✅ YouTube 按鈕 -->
   <br>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/bFy8fX4yiCQ?si=cVgjuLhd3TU8TQ-r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/bFy8fX4yiCQ?si=cVgjuLhd3TU8TQ-r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
     ▶️ 點我看影片
   <video width="560" height="315" controls>
     <source src="11.mp4" type="video/mp4">
