--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
   <!-- ✅ YouTube 按鈕 -->
   <br>
-  <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/sHo5eECgqrM?si=GgdghBuW5M6X-Z4F&amp;start=7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sHo5eECgqrM?si=GgdghBuW5M6X-Z4F&amp;start=7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     ▶️ 點我看影片
   <video width="560" height="315" controls>
     <source src="26.mp4" type="video/mp4">
