--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
     <h3>
       <img src="16.jpg" alt="圖片"  width="300">
     </h3>
-    
+    <h2>我們的地點</h2>
+  <iframe
+    src="https://maps.app.goo.gl/PLif12uyKchrG1698"
+    width="600"
+    height="450"
+    style="border:0;"
+    allowfullscreen=""
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
     
   <!-- ✅ YouTube 按鈕 -->
   <br>
