--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </h3>
     <h2>我們的地點</h2>
   <iframe
-    src="https://maps.app.goo.gl/PLif12uyKchrG1698"
+    src="https://maps.app.goo.gl/fVjfRL1VuERX9Afh8"
     width="600"
     height="450"
     style="border:0;"
