--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
   
   <p>這是我在 GitHub Pages 建立的第一個網頁</p>
-  <h1>2025/04/11  母親節快樂</h1>
+  <h1>身體健康  身心愉快</h1>
   <!-- ✅ 點圖片跳轉 -->
   <a href="https://example.com" target="_blank">
     </a>
