--- a/index.html
+++ b/index.html
@@ -64,15 +64,7 @@
     </h3>
     
   <h4>我們的地點</h4>
-<iframe
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25022.00999401525!2d121.52885085666135!3d25.07965307531802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442ac12f6cf7d73%3A0x4d733f290725ce21!2z576O6bqX6I-v55m-5qiC5ZyS5pGp5aSp6Lyq!5e0!3m2!1szh-TW!2stw!4v1749818298469!5m2!1szh-TW!2stw"
-  width="600"
-  height="450"
-  style="border:0;"
-  allowfullscreen=""
-  loading="lazy"
-  referrerpolicy="no-referrer-when-downgrade">
-</iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1807.0291235872076!2d121.5131134040763!3d25.066014856050092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a9466bc42f53%3A0xc2897869532c4b4b!2z5Lyv5pyX5ZKW5ZWh6aSoIC0g6YeN5oW26ZaA5biC!5e0!3m2!1szh-TW!2stw!4v1750856563575!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </h4>
   <!-- ✅ YouTube 按鈕 -->
