--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 <body>
   
   <p>這是我在 GitHub Pages 建立的第一個網頁</p>
-  <h1>身體健康  身心愉快</h1>
+  <h1>500聚樂部聚餐~
+時間：7/22星期二中午11:30
+地點：一郎餐廳
+</h1>
   <!-- ✅ 點圖片跳轉 -->
   <a href="https://example.com" target="_blank">
     </a>
