--- a/song.html
+++ b/song.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>九月玫瑰｜歌詞展示頁</title>
+  <title>陣雨｜歌詞展示頁</title>
   <style>
     body {
       margin: 0;
@@ -63,23 +63,12 @@
 </head>
 <body>
   <div class="content">
-    <h1>龍千玉《九月玫瑰》</h1>
+    <h1>《陣雨》</h1>
     <iframe src="https://www.youtube.com/embed/JM-aK4aDF14?si=hPsqTHUHH4NJAF5I" allowfullscreen></iframe>
 
     <button id="toggleBtn" onclick="toggleLyrics()">顯示歌詞</button>
     <div id="extraText">
-玫瑰有情從不曾開滿九月時
-這段故事 你藏在心裡面
-陪你行過 桂花開滿的巷子邊
-聽你講銘心刻骨少年時
-風雨滿天錯過約定的日子
-嘸願放棄 生生世世等待伊
-手中白玉的玫瑰 刻著兩人的名字
-你為愛守護 苦苦等千年
-望月求天滿身淚 一步之遠身影離
-明明相愛 變成花離枝
-今生無緣再相見 心也永遠對伊去
-你的美 ~ 是女人的情意
+
     </div>
     <br>
     <button onclick="downloadPage()">下載畫面</button>
