--- a/image.html
+++ b/image.html
@@ -138,7 +138,7 @@
 
   <!-- 🎵 背景音樂 -->
   <audio id="bgm" loop>
-    <source src="02-032__45992 40025.mp3" type="audio/mpeg">
+    <source src="02-032__45992_40025.mp3" type="audio/mpeg">
   </audio>
 
   <script>
@@ -150,5 +150,6 @@
 
 </body>
 </html>
+
 
 
