--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/klrIxRcfNqo?si=t1Jq-ZXWswZywBQp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
      <!-- ✅ YouTube 按鈕 -->
   <br>
-    <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/klrIxRcfNqo?si=zbp0vzK1QChRU2Sv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/klrIxRcfNqo?si=zbp0vzK1QChRU2Sv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   ▶️ 點我看影片
   <video width="560" height="315" controls>
     <source src="12.mp4" type="video/mp4">
@@ -109,6 +109,7 @@
   </video>
 </body>
 </html>
+
 
 
 
