--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   
   <p>這是我在 GitHub Pages 建立的第一個網頁</p>
   <h1>500聚樂部聚餐~
-時間：7/22星期二中午11:30
+時間：9/23星期二中午11:30
 地點：一郎餐廳
   </h1>
   <!-- ✅ 點圖片跳轉 -->
@@ -62,6 +62,8 @@
     <h2>
       <img src="28.jpg"  alt="圖片" width="300">
     </h2>
+    <h6>
+      <img src="28.png" alt="圖片" width="300">
     <h3>
       <img src="21.jpg" alt="圖片"  width-"300">
     </h3>
@@ -110,6 +112,7 @@
   </video>
 </body>
 </html>
+
 
 
 
