--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <img src="28.jpg"  alt="圖片" width="300">
     </h2>
     <h3>
-      <img src="27.png" alt="圖片" width="300">
+      <img src="" alt="圖片" width="300">
     </h3>
     <h4>
       <img src="21.jpg" alt="圖片"  width-"300">
@@ -113,6 +113,7 @@
   </video>
 </body>
 </html>
+
 
 
 
