--- a/page.html
+++ b/page.html
@@ -62,7 +62,7 @@
       <img src="28.jpg"  alt="圖片" width="300">
     </h2>
     <h3>
-      <img src="27.png" alt="圖片" width="300">
+      <img src="" alt="圖片" width="300">
     </h3>
     <h4>
       <img src="21.jpg" alt="圖片"  width-"300">
@@ -112,4 +112,5 @@
   </video>
 </body>
 </html>
+
 
